change run in yml file

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -29,4 +29,4 @@ jobs:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           CHAT_ID: ${{ secrets.CHAT_ID }}
           AFFILIATE_TAG: ${{ secrets.AFFILIATE_TAG }}
-        run: python amazon_to_telegram.py
+        run: python main.py
