--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -2,8 +2,8 @@ name: Amazon Scraper Auto
 
 on:
   schedule:
-    - cron: "0 6 * * *" # First run at 6 AM (random delay inside script)
-    - cron: "0 18 * * *" # Second run at 6 PM (random delay inside script)
+    - cron: "0 6 * * *"   # First run at 6 AM (random delay inside script)
+    - cron: "0 18 * * *"  # Second run at 6 PM (random delay inside script)
   workflow_dispatch:
 
 jobs:
@@ -24,11 +24,7 @@ jobs:
           pip install -r requirements.txt
           playwright install firefox
 
-      - name: Test secrets
-        run: |
-          echo "TELEGRAM_TOKEN=${TELEGRAM_TOKEN}"
-          echo "CHAT_ID=${CHAT_ID}"
-          echo "AFFILIATE_TAG=${AFFILIATE_TAG}"
+      - name: Run Script
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           CHAT_ID: ${{ secrets.CHAT_ID }}
