--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -24,6 +24,26 @@ jobs:
           pip install -r requirements.txt
           playwright install firefox
 
+      - name: Verify secrets
+        env:
+          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+          CHAT_ID: ${{ secrets.CHAT_ID }}
+          AFFILIATE_TAG: ${{ secrets.AFFILIATE_TAG }}
+        run: |
+          if [ -z "$TELEGRAM_TOKEN" ]; then
+            echo "❌ TELEGRAM_TOKEN is not set"
+            exit 1
+          fi
+          if [ -z "$CHAT_ID" ]; then
+            echo "❌ CHAT_ID is not set"
+            exit 1
+          fi
+          if [ -z "$AFFILIATE_TAG" ]; then
+            echo "❌ AFFILIATE_TAG is not set"
+            exit 1
+          fi
+          echo "✅ All secrets are configured"
+
       - name: Run Script
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
