--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -2,13 +2,17 @@ name: Amazon Scraper Auto
 
 on:
   schedule:
-    - cron: "0 6 * * *"   # First run at 6 AM (random delay inside script)
-    - cron: "0 18 * * *"  # Second run at 6 PM (random delay inside script)
+    - cron: "0 6 * * *"   # 6 AM
+    - cron: "0 18 * * *"  # 6 PM
   workflow_dispatch:
 
 jobs:
   run-script:
     runs-on: ubuntu-latest
+    env:
+      TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+      CHAT_ID: ${{ secrets.CHAT_ID }}
+      AFFILIATE_TAG: ${{ secrets.AFFILIATE_TAG }}
 
     steps:
       - name: Checkout repo
@@ -23,28 +27,33 @@ jobs:
         run: |
           pip install -r requirements.txt
           playwright install firefox
+          playwright install-deps
 
       - name: Verify secrets
-        env:
-          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          CHAT_ID: ${{ secrets.CHAT_ID }}
-          AFFILIATE_TAG: ${{ secrets.AFFILIATE_TAG }}
         run: |
-         if [ -z "$TELEGRAM_TOKEN" ]; then echo "❌ TELEGRAM_TOKEN is not set"; else echo "✅ TELEGRAM_TOKEN is set";
-            
-          fi
-           if [ -z "$CHAT_ID" ]; then echo "❌ CHAT_ID is not set"; else echo "✅ CHAT_ID is set";
-            
-          fi
-         if [ -z "$AFFILIATE_TAG" ]; then echo "❌ AFFILIATE_TAG is not set"; else echo "✅ AFFILIATE_TAG is set";
+          if [ -z "$TELEGRAM_TOKEN" ]; then
+            echo "❌ TELEGRAM_TOKEN is not set"
             exit 1
+          else
+            echo "✅ TELEGRAM_TOKEN is set"
           fi
+
+          if [ -z "$CHAT_ID" ]; then
+            echo "❌ CHAT_ID is not set"
+            exit 1
+          else
+            echo "✅ CHAT_ID is set"
+          fi
+
+          if [ -z "$AFFILIATE_TAG" ]; then
+            echo "❌ AFFILIATE_TAG is not set"
+            exit 1
+          else
+            echo "✅ AFFILIATE_TAG is set"
+          fi
+
           echo "✅ All secrets are configured"
 
       - name: Run Script
         run: python main.py
-        env:
-          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          CHAT_ID: ${{ secrets.CHAT_ID }}
-          AFFILIATE_TAG: ${{ secrets.AFFILIATE_TAG }}
 
