--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -2,8 +2,7 @@ name: Amazon Scraper Auto
 
 on:
   schedule:
-    - cron: "0 6 * * *"   # First run at 6 AM
-    - cron: "0 18 * * *"  # Second run at 6 PM
+    - cron: "0 6 * * *"   # Run at 6 AM UTC daily
   workflow_dispatch:
 
 jobs:
