--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -9,29 +9,32 @@ jobs:
   run-script:
     runs-on: ubuntu-latest
 
-    # Job-level environment variables (secrets automatically available to all steps)
     env:
       TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
       CHAT_ID: ${{ secrets.CHAT_ID }}
       AFFILIATE_TAG: ${{ secrets.AFFILIATE_TAG }}
 
     steps:
-      # Step 1: Checkout repository
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Step 2: Setup Python
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
-      # Step 3: Install dependencies and Playwright
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
           playwright install firefox
           playwright install-deps
-      # Step 5: Run the scraper script
+
+      # Disable Sandbox (playwright bug fix on GitHub Actions)
+      - name: Allow Playwright Without Sandbox
+        run: |
+          sudo sysctl -w kernel.unprivileged_userns_clone=1
+
       - name: Run Scraper
+        env:
+          DISPLAY: :99
         run: python main.py
